# suu-project

./: .gitignore  CMakeLists.txt  README.md  client.cpp  opis.txt  server.cpp  vehicle.proto
app/: Dockerfile  Dockerfile.customer-client  Dockerfile.manager-client  Dockerfile.package-service  Dockerfile.suu-base  Dockerfile.vehicle-client  Dockerfile.vehicle-service  build_and_load.sh  build_base_docker_image.sh  build_docker_images.sh  customer-client.yaml  deploy_grafana.sh  deploy_kind.sh  deploy_otel_collector.sh  do_all_sh.sh  loki-values.yaml  manager-client.yaml  otel-collector.yaml  package-service.yaml  prometheus-values.yaml  remove_default_namespace_deployments.sh  remove_deployments.sh  vehicle-client.yaml  vehicle-service.yaml
app/deploy/: Dockerfile  customer-client.yaml  manager-client.yaml  package-service.yaml  vehicle-client.yaml
app/src/: Makefile  customer.cpp  manager.cpp  package_service.cpp  package_service.grpc.pb.cc  package_service.grpc.pb.h  package_service.pb.cc  package_service.pb.h  package_service.proto  vehicle.cpp  vehicle_service.cpp  vehicle_service.grpc.pb.cc  vehicle_service.grpc.pb.h  vehicle_service.pb.cc  vehicle_service.pb.h  vehicle_service.proto
